[tool.poetry]
name = "simple-retweet-bot-1"
version = "0.1.0"
description = ""
authors = ["JirroReo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.5.0"
Flask = "^2.0.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
